day1 part 1 complete

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ Cargo.lock
 /*/target/*
 /target/*
 */target/*
+*/*/target/
+*/*/target/*
+*/*/*/target/
+*/*/*/target/*
+*/*/*/*/target/
+*/*/*/*/target/*
